# NotebookUM

./: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  config.py  main.py  pyproject.toml  readme.md
.github/: sync-task.yml
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
app/: __init__.py
app/CMD/: Github_Task.py  assing_issues.py
app/controllers/: __init__.py  ai_controller.py  example_controller.py  health_controller.py
app/models/: example_model.py  health_model.py
app/services/: ai_service.py  example_service.py  health_service.py
dockers/: docker-compose.yml
dockers/PostgreSQL/: .env.example  docker-compose.yml
dockers/notebookum/: .env.example  docker-compose.yml
dockers/redis/: docker-compose.yml
dockers/traefik/: .env.example  docker-compose.yml
dockers/traefik/certs/: cert.pem  key.pem
dockers/traefik/config/: traefik.yml
docs/: documentos.sql  resumenes.sql  usuarios.sql
specs/001-document-processing-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-document-processing-api/checklists/: requirements.md
specs/001-document-processing-api/contracts/: openapi.yaml
tests/: test_ai_service.py  test_example.py
