[project]
name = "notebookum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "granian>=2.7.3",
    "openai>=2.31.0",
    "pydantic-settings>=2.13.0",
    "psycopg[binary]>=3.3.3",
    "requests>=2.33.1",
    "flask>=3.1.3",
]
